[+] implement moving tasks up and down in a chain, closes #27 depends on cybertec-postgresql/pg_timetable#314

--- a/forms/fmmain.lfm
+++ b/forms/fmmain.lfm
@@ -784,6 +784,7 @@ object fmMain: TfmMain
       DisableIfNoHandler = False
       Hint = 'Move selected task up'
       ImageIndex = 2
+      OnExecute = acMoveTaskUpExecute
       OnUpdate = acTaskToolbarUpdate
     end
     object acMoveTaskDown: TAction
@@ -792,6 +793,7 @@ object fmMain: TfmMain
       DisableIfNoHandler = False
       Hint = 'Move selected task down'
       ImageIndex = 1
+      OnExecute = acMoveTaskDownExecute
       OnUpdate = acTaskToolbarUpdate
     end
     object acTaskDelete: TAction
