--- a/udatamodule.lfm
+++ b/udatamodule.lfm
@@ -201,6 +201,9 @@ object dmPgEngine: TdmPgEngine
       '  )'
       'WHERE task_id = :"task_id"'
     )
+    DeleteSQL.Strings = (
+      'SELECT timetable.delete_task(:"task_id")'
+    )
     Options = [sqoKeepOpenOnCommit, sqoAutoApplyUpdates, sqoAutoCommit, sqoRefreshUsingSelect]
     Params = <    
       item
