--- a/udatamodule.lfm
+++ b/udatamodule.lfm
@@ -28,7 +28,52 @@ object dmPgEngine: TdmPgEngine
     PacketRecords = -1
     IndexName = 'DEFAULT_ORDER'
     MaxIndexesCount = 20
-    FieldDefs = <>
+    FieldDefs = <    
+      item
+        Name = 'chain_id'
+        DataType = ftLargeint
+        Precision = -1
+      end    
+      item
+        Name = 'chain_name'
+        DataType = ftWideString
+        Precision = -1
+      end    
+      item
+        Name = 'run_at'
+        DataType = ftMemo
+        Precision = -1
+      end    
+      item
+        Name = 'max_instances'
+        DataType = ftInteger
+        Precision = -1
+      end    
+      item
+        Name = 'live'
+        DataType = ftBoolean
+        Precision = -1
+      end    
+      item
+        Name = 'self_destruct'
+        DataType = ftBoolean
+        Precision = -1
+      end    
+      item
+        Name = 'exclusive_execution'
+        DataType = ftBoolean
+        Precision = -1
+      end    
+      item
+        Name = 'client_name'
+        DataType = ftMemo
+        Precision = -1
+      end    
+      item
+        Name = 'timeout'
+        DataType = ftInteger
+        Precision = -1
+      end>
     AfterClose = qryChainsAfterClose
     AfterDelete = qryChainsAfterDelete
     AfterInsert = qryChainsAfterInsert
@@ -46,14 +91,12 @@ object dmPgEngine: TdmPgEngine
       '  self_destruct,'
       '  exclusive_execution,'
       '  client_name,'
-      '  timeout,'
-      '  max_instances'
+      '  timeout'
       'FROM timetable.chain'
       'ORDER BY chain_id'
     )
     InsertSQL.Strings = (
       'INSERT INTO timetable.chain ('
-      #9'"task_id",'
       #9'"chain_name",'
       #9'"run_at",'
       #9'"max_instances",'
@@ -61,9 +104,8 @@ object dmPgEngine: TdmPgEngine
       #9'"self_destruct",'
       #9'"exclusive_execution",'
       #9'"client_name",'
-      '  "timeout"'
+      #9'"timeout"'
       ') VALUES ('
-      #9'timetable.add_task(''SQL'', ''SELECT 1'', NULL),'
       #9':"chain_name",'
       #9':"run_at",'
       #9':"max_instances",'
@@ -71,7 +113,7 @@ object dmPgEngine: TdmPgEngine
       #9':"self_destruct",'
       #9':"exclusive_execution",'
       #9':"client_name",'
-      '  :"timeout"'
+      #9':"timeout"'
       ')'
     )
     UpdateSQL.Strings = (
@@ -164,7 +206,7 @@ object dmPgEngine: TdmPgEngine
     )
     UpdateSQL.Strings = (
       'UPDATE timetable.task SET ('
-      '    task_oder,'
+      '    task_order,'
       '    task_name,'
       '    command,'
       '    kind,'
