[+] add Run toolbar [*] remove Chain tab sheet [+] add Run icons

--- a/forms/fmmain.lfm
+++ b/forms/fmmain.lfm
@@ -1,7 +1,7 @@
 object fmMain: TfmMain
-  Left = 1088
+  Left = 654
   Height = 1054
-  Top = 365
+  Top = 325
   Width = 1524
   Caption = 'pg_timetable IDE'
   ClientHeight = 1024
@@ -38,20 +38,20 @@ object fmMain: TfmMain
         TabOrder = 0
         object pnlChains: TPanel
           Left = 0
-          Height = 437
+          Height = 436
           Top = 0
           Width = 1516
           Align = alTop
           BevelOuter = bvNone
           BorderStyle = bsSingle
           Caption = 'pnlChains'
-          ClientHeight = 433
+          ClientHeight = 432
           ClientWidth = 1512
           ParentColor = False
           TabOrder = 0
           object gridChains: TDBGrid
             Left = 0
-            Height = 391
+            Height = 390
             Top = 42
             Width = 1512
             Align = alClient
@@ -82,6 +82,8 @@ object fmMain: TfmMain
                 FieldName = 'live'
               end            
               item
+                MinSize = 10
+                MaxSize = 200
                 PickList.Strings = (
                   '* * * * *'
                   '@every <interval>'
@@ -94,12 +96,16 @@ object fmMain: TfmMain
                 FieldName = 'run_at'
               end            
               item
+                MinSize = 10
+                MaxSize = 200
                 Title.Alignment = taCenter
                 Title.Caption = 'Client'
                 Width = 264
                 FieldName = 'client_name'
               end            
               item
+                MinSize = 10
+                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Exclusive'
@@ -107,6 +113,8 @@ object fmMain: TfmMain
                 FieldName = 'exclusive_execution'
               end            
               item
+                MinSize = 10
+                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Self Destruct'
@@ -114,6 +122,8 @@ object fmMain: TfmMain
                 FieldName = 'self_destruct'
               end            
               item
+                MinSize = 10
+                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Max Instances'
@@ -121,6 +131,8 @@ object fmMain: TfmMain
                 FieldName = 'max_instances'
               end            
               item
+                MinSize = 10
+                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Timeout (ms)'
@@ -175,7 +187,7 @@ object fmMain: TfmMain
               Left = 68
               Height = 42
               Top = 0
-              Width = 240
+              Width = 300
               Align = alLeft
               ButtonHeight = 40
               ButtonWidth = 40
@@ -214,13 +226,31 @@ object fmMain: TfmMain
                 Action = acChainRefresh
               end
             end
+            object toolbarRun: TToolBar
+              Left = 368
+              Height = 42
+              Top = 0
+              Width = 300
+              Align = alLeft
+              ButtonHeight = 40
+              ButtonWidth = 40
+              DisabledImages = imglToolbarsDisabled
+              EdgeBorders = []
+              Images = imglToolbars
+              TabOrder = 2
+              object btnChainRun: TToolButton
+                Left = 1
+                Top = 0
+                Action = acChainRun
+              end
+            end
           end
         end
         object splitChain: TSplitter
           Cursor = crVSplit
           Left = 0
           Height = 12
-          Top = 437
+          Top = 436
           Width = 1516
           Align = alTop
           Color = clScrollBar
@@ -232,17 +262,17 @@ object fmMain: TfmMain
         end
         object pnlDetails: TPanel
           Left = 0
-          Height = 537
-          Top = 449
+          Height = 538
+          Top = 448
           Width = 1516
           Align = alClient
           BevelOuter = bvNone
-          ClientHeight = 537
+          ClientHeight = 538
           ClientWidth = 1516
           TabOrder = 2
           object gridTasks: TDBGrid
             Left = 0
-            Height = 497
+            Height = 498
             Top = 40
             Width = 1516
             Align = alClient
@@ -251,6 +281,8 @@ object fmMain: TfmMain
             Color = clWindow
             Columns = <            
               item
+                MinSize = 10
+                MaxSize = 200
                 Title.Caption = 'Task Name'
                 Width = 339
                 FieldName = 'task_name'
@@ -395,14 +427,6 @@ object fmMain: TfmMain
           end
         end
       end
-    end
-    object tsChain: TTabSheet
-      Caption = 'Chain'
-      ImageIndex = 2
-    end
-    object tsTask: TTabSheet
-      Caption = 'Task'
-      ImageIndex = 3
     end
     object tsLog: TTabSheet
       Caption = 'Log'
@@ -619,6 +643,13 @@ object fmMain: TfmMain
       OnExecute = acChainRefreshExecute
       OnUpdate = acChainToolbarUpdate
     end
+    object acChainRun: TAction
+      Category = 'Chains'
+      Caption = 'Run'
+      ImageIndex = 9
+      OnUpdate = acChainToolbarUpdate
+      ShortCut = 120
+    end
   end
   object imglToolbars: TImageList
     Height = 24
@@ -626,77 +657,82 @@ object fmMain: TfmMain
     Left = 96
     Top = 120
     Bitmap = {
-      4C7A0900000018000000180000007D0300000000000078DAED9C8D8DEB200C80
-      3D424660848C901132424660846C9011324246C8088C901132425F9F04AA2F17
-      C018A3EBF56C09E9AEB49F833160C20FC09F92874FEFCEB7CFB417F0B7679A0B
-      D881D313F8067D9ED3313CD3E9BF3B153CFF80F28604DF659E2365FFC9E79D91
-      FC11E577CCFA3D1265DF0836CCF14319B69BBCDDE78D15FCDEE71F89B2990A7E
-      97A88393C0CF4997780647F0AF9CA4ECB3FA3C5BD9EE63F53B66FC97621B97F1
-      11575186F0EC2ED17E705F3215B0275FEE93507FB87FB3049B58E47B9C3EF4F0
-      FF0F88D97B1B3B546736619798AF39A42796DC4D3F0E85B65D51FB3EFDDFBBCF
-      EB404545E337E57F369FDACF19DF3F96C4B793FF0DA59FB68931F28E3FA1F16B
-      21966189E8B8F239EC940ECCAF61C774E0BF6BD9773A1E688C9460A7742CC2BE
-      BF3464631D0BA8A8A8B4105B39BF949A37D5B0A575D8C4DCC80AB2A7CB3BAA5A
-      1D36333ED6E8B0C4F19DA3A3343E190AE7FCC68FAF25F1D5E07FD357D6B7C6CF
-      CA7F67BE8A8A8AF60FCAFF59FE8399DE85AFF5AB7C151595BF2B1DD0D63C3A26
-      FBFF1E0697F97DF8DECEE087B5F1988EC00EDF31823A6AD9291D52EC980E49F6
-      9D0E69F6D5DE0F825F71D98EE057356C43F45D2EBBA47D70D9123A3A646B43FC
-      1EA70C46B01F5451F9A4B17FF1E36EDF80BDC2D7B5F2BE01FB84AFFBEB7A6176
-      D82319F6D51E0DD83DBCF6DDAD0DD97B451CA7ECCF604363367EBFD0827D7D7F
-      21CDC67C9CA4D8D098FD09F2104A3FC5575151E1C904F7E75EA4D861CFA66DC8
-      5EDE80DD036D9F0D87DD41FA7C9F844D627B9325ED1DD3215997571D2DFC6481
-      767B92EF74E8BE61151519B1507606B2941DDAAC69C89E7E293B970E789DA9A7
-      DA6FA9984F58868E947D8C9F83AF97B9A6A40E1C6F9C15E5A0BCB71B18FEBC00
-      FD3C2F7E3732376A93E1FC76AB183775B6FE37F087423F2D95B9610C3300FD7C
-      3A877D08FB66E7B90B6ABB1BD0DE4595F66DA567DFA9CCDD3F7F0F2A2AE9F633
-      7B7F71F05A375A217D570A65DCDB80763F43690C36A276E9FCF3F7F0DA3F30FA
-      CF0EE09D11EA1037D72E4BCE850D171DA57D7F2E1ED82BFA400BE9753C7CBF0A
-      37664EDDFF836331EE5ADF948821AEBE68983E1D1BE30FF8BE76211943047FE7
-      AC876C37E3C3556AEEFF31376D3A56BFDCF78B39FF90B8FF2717D7BBCA32CC11
-      DBDCD97164966128E8AF6662BF7030FB926BFF1CF61219640BEE7C967AFF4FED
-      1E8E09BEDFFF1362AB093E7C7DF21FCCA1D5B9
+      4C7A0A0000001800000018000000C20300000000000078DAED9C8D8DEB200C80
+      3D424660848C9011320223304237C8081DA123640446C80819A1AF4F02D5970B
+      60C0567FCE9690EE9AF6730063CC2FC09F927B48EFCE778FB456F06F8F74A960
+      47CE48E01BF47949C7F4487BF8AEAD78FF093D9B327C5F788F5CF9DBF06C4F3C
+      9FD1F3A1B17EB74CDE6F84322CF1631E6E27CFD6F06CEEE08FE1F996C99BE9E0
+      0F993AD809FC920C9977F004FB2A49AE7CAEE199EB6CF7A9FA9D0BF64B291B5F
+      B011DF9187F8EE3ED37EB02FB1156C1BF2BD13EA0FFB37472813876CAFC5876E
+      E1FF0931C750C61ED599CB944BCAD63CD2934AFEC48F4365D95E51FBDEC3DF6B
+      7836808A8AC66FCAFF6E3ED5CF99E01F6BE25B1B7E43F1D32ED3479EF12DEABF
+      16621E96848E23BF859DD381F93DEC940EFC772FFB4CC71DF5911CEC9C8E85D9
+      F6174136D6B1808A8A8A84B8CEF125D7B8A987CDADC365C6468E916D0F7354BD
+      3A5CA17FECD1E188FD7B8B8EDAF864AA1CF39BD0BFD6C45753F8CDD859DF1A3F
+      2BFF9DF92A2A2AEA1F94FF5AFEBD31BD0B5FEB57F92A2A2A7F5706A0AD790C8D
+      ECFF7B187CE1F7F17B6B033FAE8DA7744476FC8E61D4D1CBCEE9E062A77470B2
+      CF7470B38FE57D27D8552BDB13ECAA876D88B6DBCAAE691FAD6C0E1D032A6B43
+      FC5E4B1E0CA31F5451F9A6BE7F09FDEE28C0BEC2CFB5F25180BDC3CFFD752333
+      3BEE918CFB6A3701F608CF7D775741F6DA11C729FB3BD820CCC6F30B12ECE3FC
+      05371BF371E2628330FB1BE4CE945EC557515169130BE7E75EB8D871CFA61364
+      2F6FC01E81B6CFA6853D40FE7C1F4799A4F6267396774A07675D1E7548D8C902
+      727B92CF74E8BE6115151E71507706B2961DDBAC1164DB0F6597D206CF33F5D4
+      F25B3AC613AE4147AE7C4C18835F0F634D4E1D38DED83BF24199B79B1AEC7901
+      FA795E3C3772116A93F1FCB6548C9B3B5BFF09FCA9D24E6BE52218C34C403F9F
+      DEC2DE986D7308DC05B5DD1BD0E6A26A7D5BEDD9772A730DEF3F828A4ABEFD5C
+      82BD7878AE1B5D217F570AA5DFBB01ED7E86DA186C46EDD287F71FE1B97F600E
+      9F6DD076466840DC52BBAC3917361D74D4FAFE523CB076F84007F9753C7CBF4A
+      6BCC9CBBFF07C762AD6B7D3613431C6DD134DA74AA8FDFE0F7DA05670C11EDBD
+      653DE476D23F1CA5E7FE1F73D2A653F5DB3ABF58B20F8EFB7F4A71BDEFCCC325
+      513667E53837E661AAF05717A25FD81A7DC9D13FC7BD44069545EB78967AFF4F
+      EF1E0E0BBFEFFF89B195055D9F5479FD3C99A40D469BB7827CECD70741BE445E
+      527E872B2FA5719E15E473E4A5661C3C09F36721FEDA111353E60624EAB7E79D
+      4BEDCB09B52FAE773EF36F92F7861850F948F907A43935AA
     }
   end
   object imglToolbarsDisabled: TImageList
     Height = 24
     Width = 24
     Left = 96
-    Top = 208
+    Top = 209
     Bitmap = {
-      4C7A0900000018000000180000001D0400000000000078DAED5CDBADDB300CBD
-      2374848ED0113A4247E80819A11BE4E326EE67809BC7FDEC0819C12378048D90
-      8AB6E4D08E1E1445B77990800103920F2D8AA2288AD2DBDBEBD0E9B0BDC073EF
-      F8A7C366753A34672AFEE9B8FD73DCBFFFA2630F38C7E3F65B0EFF73F7FBEB58
-      3FC363BF7FFF6EEB99BEEEC7F627F5FFDD777D19BC27E4DBA6FE23257FF81F57
-      6E82DFEE9B1FBE7CB75B7FE1F4AF2DEBA26DB77D9493610E7F6C83C5BAFDB639
-      F765B61D6C7CAB0FAE4E176B1BE803171FE41AEB03AF3729FC1C21FC4B4C7752
-      FA95A3947C3E0FDBDD50B659D58DFB48FF22FDAC904D9BD291B19CD1066457DA
-      D8F899D892C018C9E83DE887C9F51FB66FB9760C32E9EB1B8A7D0BF38071B159
-      F9FF02CC5E4F86FE6A7D9F419D985C12BAD6223EB1A79DDBF1229DB6B275BADB
-      5DFF15DE9B339495FCB39292FA6F8AFF88F8543BE7E6B0AEC4BF75F35747B1D3
-      13FF7CC623848FE6465BD6AC697268D6211E737C0E768A07C6AFC18EF198BD57
-      618778A047043BCD43063BCC43167BCA63196C2525F57F606EE0AF2FA5D64D75
-      D8B23CC2D8323CE673318E51D5F208CDF3787EACE111F321E6F33B8747A97F82
-      7950D6FCCEBF328CF8A1A95907ABFFACF8F78EAFA4A4A4F125C5FFBFF884987C
-      F0B9177CED5FC55752527A5D82FD0ECA9E0767FFB7DF571FF25DDAD4F7D77AB7
-      B94E59FCEBDE789007FA87BE4E695E498A472D768A8714768C87247684872876
-      40DE979C5E5560B739BDAAC106995074978B5D323EB8D8123CD0B7493DC1F538
-      6DA0E820D50E2A293DD3DCEFF66ACFB531F3E0B81B732187BD72291E336C83F3
-      EB6A79DC60BB1CC931AF3690F3598BED72FC86BC5A5BBE1436B481EBC729F673
-      60032D893D895B2D803D8F5F4863C7E36E32D8617C39EC67206EDC931A075D1A
-      5F494989477D7E4DE0DC8B18F698B3299BDB24996B2A810DF32225CF8683EDD6
-      E32697CB239D372C2DEF188FA5F2860177093D99E50D1BCD1B56527A145F77B3
-      2A3903598AEDC7AC641C7E8E2DFDFFFF0A9BF074FE4C3D557E917322C4879A7B
-      9B9E1BC7753EE4D0DA35F8340E47DB63A3F2C0FE46A96F35E14188DBE11CE292
-      FEA09EE7C5B191926F8AF4CF9FDF5EC8C74D9DAD7F04FC6B1F97ED05937D69DB
-      AF4BF930E8DE0B5373BF4002BB93D44DE8CB01B71F87C6EB252516C5B06F4567
-      DFE9981097B7635C78FF42E9B908F47C18FBFD3E4EEBF78D7A7B9FB82B8534EF
-      4D7312A2F73394FA606EAE30E3FD0EF6FF81DF983F60CB9D3DEB386784FCBE3A
-      60E4C665C9B9306CFB4AE2DA93334289F1DCEF57326D206A47979C9FADDCB93E
-      73EAFE1FEC8B71F7FA92F7FFCC7491D30674BF8D89B5ADD49FA4FA105EDF39FB
-      21817118C267DFFF83EFADF16332DEBFBCF8624E3F84EEFF49FAF535F7FF201F
-      AB25C991617BBDDF425E43126C85ABDF316DC9C43EFB5C2268A79705773D4BBF
-      FFA72E87237CFF8FF3AD5EE0FE9FBF2F5B364B
+      4C7A0A0000001800000018000000710400000000000078DAED5CEB8DDB300CBE
+      113A4247E8081DA12374848CD00DEEC725EECF00CDE37E76848CE0113C8246B8
+      8AB6E4D08E1E14455D733912301040CA473D288A22293D3D7D1E3A1F776FF0DD
+      3BFEF9B8DD9C8FDD858A7F3EEDFE9E0E2FBFE8D813CEE9B4FB96C37FDDFFFE3A
+      D7CFF0381C5EBEDB7A66ACFB67F793DA7EF7BFB10C7E27C6B74FB52335FED01E
+      576E82FF3D743F7CF97EFFFC8533BFB66C88F6DDCE516E0C73F8731F2CD6ED7F
+      BBCB5866FBC1C6B7F2E0EA0CB1BE813C70F1615C6373E0E526859F2384FF1693
+      9D947CE528353EAFC7DD7E2ADB6EEAD67D647E917C568C4D9F9291B99CD107A4
+      57FAD8FA59E892C01AC9C83DC887C9CD1FD66FB97E4C6332D63714FD16E601EB
+      62BBF1ED02CC514EA6F9EAFD9C419DD8B82464AD477C625FBFD6E345326DC7D6
+      C9EE706D2BFCEE2E5056D2662525B5DF14FF23E253F59CDBC38612FBD6ED5F03
+      454F2FECF3158F103EDA1B6D59F74C1B87EE39C4638DCFC14EF1C0F835D8311E
+      ABDF55D8211EE813C14EF390C10EF390C55EF26883ADA4A4F60FEC0DFCF3A5D4
+      B9A90E5B9647185B86C77A2FC63EAA5A1EA17D1EEF8F353C6236C47A7FE7F028
+      B54F300FCA99DFD95786E13F3435E760B59F15FFDEF1959494D4BFA4F8FF179F
+      E0930F7EF782AFF3ABF84A4A4A9F9720DE41897970E2BF635C7DCA77E953FFBF
+      D6BBCD75CAE25F63E3411EA80D639DD2BC92148F5AEC140F29EC180F49EC080F
+      51ECC078BFE5E4AA02BBCFC9550D368C094576B9D825EB838B2DC103FD372927
+      B81EA70F1419A4EA4125A547DAFB5DACF652EB330FAEBB3917728A954BF15861
+      1B9C5F57CBE306DBE548CE79B5819CCF5A6C97E337E5D5DAF256D8D007AE1DA7
+      D88F810DD4127BE1B76A80BDF65F4863C7FD6E32D8617C39EC4720AEDF93EA07
+      6D8DAFA4A4C4A331BF2670EF450C7BCED994CD6D92CC3595C0867D919267C3C1
+      76E77193CBE591CE1B961EEF188F5679C380DB424E5679C346F38695943E8AAD
+      BBDD94DC812CC5F66B56D20FBFC6966EFF7B6113BEC1DFA9A78E5FE49E08F1A3
+      E6DEA6F7C6F99C0F39B4F60CBEF4C3D1626C541ED8DE28B5AD163C087E3B9C43
+      5C321FD4FBBCD83752F29F22F9F3F7B71BD9B8A9BBF51F01FF3AC765B160B22D
+      6DE7B5950D83DEBD3035EF0B24B00749D984B99C70C77568BC5C527C510CFD56
+      74F79D8E097E79BBC685E3174A8F4520E7D3DA1FE338BD8F1B8DFA3EF1560A69
+      DF5BE62444DF6728B5C1DC5E61E6F71D6CFB81DF9C3F60CB9D3E1B3877847C5C
+      1D3072EBB2E45E18D67D257EEDC51DA1C47A1EE3954C1D88FA3124F7673BEE5C
+      9B39F5FE0FB6C5B8B1BEE4FB3F2B59E4F401BD6F63627D2BB527A9368497774E
+      3C24B00E43F8ECF77FF0BB357E4DC6E797E75FCCC987D0FB3F49BBBEE6FD1F64
+      63F5A47164E85E6FB790CF90045DE1EA0F4C5DB2D0CF3E9708FAE9C7827B9EA5
+      BFFF5397C3117EFFC7D956FAFE8FD21DF8C95ACAE09C3FD4CC1787F664BBCEA4
+      FB123A1B49F625A677A4FA923BE7D5F685729EACE94BC93998637B149DB3197B
+      2A0DBBBB54D8C459DF409BF9E5B739B7BE2463C82DDA1CD26F2DDF0D916EB3D2
+      FBD13FC400676E
     }
   end
   object imglTabs: TImageList
