--- a/forms/fmmain.lfm
+++ b/forms/fmmain.lfm
@@ -9,7 +9,7 @@ object fmMain: TfmMain
   DesignTimePPI = 144
   Menu = menuMain
   OnCloseQuery = FormCloseQuery
-  LCLVersion = '2.2.0.4'
+  LCLVersion = '2.2.4.0'
   object pcEditors: TPageControl
     Left = 0
     Height = 1024
@@ -82,8 +82,6 @@ object fmMain: TfmMain
                 FieldName = 'live'
               end            
               item
-                MinSize = 10
-                MaxSize = 200
                 PickList.Strings = (
                   '* * * * *'
                   '@every <interval>'
@@ -96,16 +94,12 @@ object fmMain: TfmMain
                 FieldName = 'run_at'
               end            
               item
-                MinSize = 10
-                MaxSize = 200
                 Title.Alignment = taCenter
                 Title.Caption = 'Client'
                 Width = 264
                 FieldName = 'client_name'
               end            
               item
-                MinSize = 10
-                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Exclusive'
@@ -113,8 +107,6 @@ object fmMain: TfmMain
                 FieldName = 'exclusive_execution'
               end            
               item
-                MinSize = 10
-                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Self Destruct'
@@ -122,8 +114,6 @@ object fmMain: TfmMain
                 FieldName = 'self_destruct'
               end            
               item
-                MinSize = 10
-                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Max Instances'
@@ -131,8 +121,6 @@ object fmMain: TfmMain
                 FieldName = 'max_instances'
               end            
               item
-                MinSize = 10
-                MaxSize = 200
                 SizePriority = 0
                 Title.Alignment = taCenter
                 Title.Caption = 'Timeout (ms)'
@@ -281,8 +269,6 @@ object fmMain: TfmMain
             Color = clWindow
             Columns = <            
               item
-                MinSize = 10
-                MaxSize = 200
                 Title.Caption = 'Task Name'
                 Width = 339
                 FieldName = 'task_name'
@@ -361,6 +347,7 @@ object fmMain: TfmMain
             ShowHint = True
             TabOrder = 0
             OnDrawColumnCell = gridTasksDrawColumnCell
+            OnEditButtonClick = gridTasksEditButtonClick
             OnSelectEditor = gridTasksSelectEditor
           end
           object toolbarTasks: TToolBar
