--- a/forms/frametaskcommandeditor.lfm
+++ b/forms/frametaskcommandeditor.lfm
@@ -1,19 +1,11 @@
-object frmTaskCommand: TfrmTaskCommand
-  Left = 0
-  Height = 360
-  Top = 0
-  Width = 480
-  ClientHeight = 360
-  ClientWidth = 480
-  Color = clDefault
-  DesignTimePPI = 144
-  OnExit = edCommandExit
-  ParentColor = False
-  ParentFont = False
-  TabOrder = 0
-  DesignLeft = 2911
-  DesignTop = 973
-  inline edCommand: TSynEdit
+inherited frmTaskCommandEditor: TfrmTaskCommandEditor
+  inherited pnlButtons: TPanel
+    inherited btnCancel: TButton
+      OnClick = FrameExit
+      OnExit = nil
+    end
+  end
+  inline edCommand: TSynEdit[1]
     Left = 0
     Height = 304
     Top = 0
@@ -25,11 +17,10 @@ object frmTaskCommand: TfrmTaskCommand
     Font.Quality = fqNonAntialiased
     ParentColor = False
     ParentFont = False
-    TabOrder = 0
+    TabOrder = 1
     OnKeyDown = edCommandKeyDown
-    Gutter.AutoSize = False
     Gutter.Visible = False
-    Gutter.Width = 75
+    Gutter.Width = 95
     Gutter.MouseActions = <>
     RightGutter.Width = 0
     RightGutter.MouseActions = <>
@@ -459,9 +450,10 @@ object frmTaskCommand: TfrmTaskCommand
     MouseTextActions = <>
     MouseSelActions = <>
     Lines.Strings = (
-      'Download'
+      'select * from foo where bar = ''baz'''
     )
     VisibleSpecialChars = [vscSpace, vscTabAtLast]
+    ScrollBars = ssAutoVertical
     SelectedColor.BackPriority = 50
     SelectedColor.ForePriority = 50
     SelectedColor.FramePriority = 50
@@ -508,7 +500,7 @@ object frmTaskCommand: TfrmTaskCommand
         MarkupInfo.Foreground = clGray
       end
       object SynGutterCodeFolding1: TSynGutterCodeFolding
-        Width = 0
+        Width = 15
         MouseActions = <>
         MarkupInfo.Background = clNone
         MarkupInfo.Foreground = clGray
@@ -517,38 +509,11 @@ object frmTaskCommand: TfrmTaskCommand
       end
     end
   end
-  object pnlButtons: TPanel
-    Left = 0
-    Height = 56
-    Top = 304
-    Width = 480
-    Align = alBottom
-    ClientHeight = 56
-    ClientWidth = 480
-    TabOrder = 1
-    object btnOK: TButton
-      Left = 344
-      Height = 38
-      Top = 8
-      Width = 113
-      Caption = 'OK'
-      OnClick = btnOKClick
-      TabOrder = 0
-    end
-    object btnCancel: TButton
-      Left = 16
-      Height = 38
-      Top = 8
-      Width = 113
-      Caption = 'Cancel'
-      OnClick = edCommandExit
-      TabOrder = 1
-    end
-  end
-  object SynSQLSyn: TSynSQLSyn
+  object SynSQLSyn: TSynSQLSyn[2]
     DefaultFilter = 'SQL Files (*.sql)|*.sql'
+    Enabled = False
     SQLDialect = sqlPostgres
-    Left = 405
-    Top = 13
+    Left = 360
+    Top = 53
   end
 end
